fix: fixed compass and spectator mode + changed default settings in config.yml