@@ -3,7 +3,9 @@ package me.xaspired.GravityReal.Managers;
 import me.xaspired.GravityReal.Main;
 import me.xaspired.GravityReal.Objects.GravityPlayer;
 import org.bukkit.Bukkit;
+import org.bukkit.GameMode;
 import org.bukkit.Material;
+import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.HumanEntity;
 import org.bukkit.entity.Player;
 import org.bukkit.event.EventHandler;
@@ -17,10 +19,11 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 public class CompassManager implements Listener {
-    private final Inventory inv = Bukkit.createInventory(null, 27, "§bGiocatori Online");
+    private final Inventory inv = Bukkit.createInventory(null, 27, "§bGiocatori in Gioco");
 
     public static void giveCompassToPlayer(Player player) {
         ItemStack compassPlayer = createGuiItem(
@@ -49,15 +52,20 @@ public class CompassManager implements Listener {
     /* **********************************************
         Custom GUI (Inventory) with players head
     ********************************************** */
-    public void updateInventoryWithPlayerHeads() {
+    public void updateInventoryWithPlayerHeads(Player player) {
         inv.clear();
         for (GravityPlayer playerInGameOnline : Main.getInstance().inGamePlayers.values()) {
+
+            // If player is himself, don't show im to the gui inventory
+            if (playerInGameOnline.getPlayer().equals(player))
+                continue;
+
             ItemStack skull = new ItemStack(Material.PLAYER_HEAD);
             SkullMeta meta = (SkullMeta) skull.getItemMeta();
             assert meta != null;
             meta.setOwningPlayer(playerInGameOnline.getPlayer());
             meta.setDisplayName("§a" + playerInGameOnline.getPlayer().getName());
-            meta.setLore(Arrays.asList("§7Clicca per visualizzare il profilo", "§8(Placeholder)"));
+            meta.setLore(List.of("§7Clicca per teletrasportarti"));
             skull.setItemMeta(meta);
             inv.addItem(skull);
         }
@@ -75,7 +83,7 @@ public class CompassManager implements Listener {
         if (item != null && item.getType() == Material.COMPASS && item.hasItemMeta()) {
             String displayName = Objects.requireNonNull(item.getItemMeta()).getDisplayName();
             if (displayName.equalsIgnoreCase("§aGiocatori in Gioco")) {
-                updateInventoryWithPlayerHeads();
+                updateInventoryWithPlayerHeads(e.getPlayer());
                 openInventory(player);
                 e.setCancelled(true);
             }
@@ -84,21 +92,42 @@ public class CompassManager implements Listener {
 
     @EventHandler
     public void onInventoryClick(final InventoryClickEvent e) {
-        if (!e.getView().getTitle().equals("§bGiocatori Online")) return;
+        if (!e.getView().getTitle().equals("§bGiocatori in Gioco")) return;
 
         e.setCancelled(true);
 
         final ItemStack clickedItem = e.getCurrentItem();
         if (clickedItem == null || clickedItem.getType().isAir()) return;
 
-        final Player p = (Player) e.getWhoClicked();
-        String name = clickedItem.getItemMeta() != null ? clickedItem.getItemMeta().getDisplayName() : "§cSconosciuto";
-        p.sendMessage("§eHai cliccato su: " + name);
+        final Player clicker = (Player) e.getWhoClicked();
+
+        if (!(clickedItem.getItemMeta() instanceof SkullMeta skullMeta)) return;
+        OfflinePlayer targetOffline = skullMeta.getOwningPlayer();
+        if (targetOffline == null || !targetOffline.isOnline()) {
+            clicker.sendMessage("§cIl giocatore non è più online.");
+            return;
+        }
+
+        // Status variables about player's infos
+        boolean hadAllowFlight = clicker.getAllowFlight();
+        boolean wasFlying = clicker.isFlying();
+        GameMode previousGameMode = clicker.getGameMode();
+
+        Player target = (Player) targetOffline;
+        clicker.teleport(target.getLocation());
+
+        // Restore old infos (gamemode, fly, etc.)
+        Bukkit.getScheduler().runTaskLater(Main.getInstance(), () -> {
+            clicker.setAllowFlight(hadAllowFlight);
+            clicker.setFlying(wasFlying);
+            clicker.setGameMode(previousGameMode);
+        }, 1L);
     }
+
 
     @EventHandler
     public void onInventoryDrag(final InventoryDragEvent e) {
-        if (e.getView().getTitle().equals("§bGiocatori Online")) {
+        if (e.getView().getTitle().equals("§bGiocatori in Gioco")) {
             e.setCancelled(true);
         }
     }
